@@ -1,3 +1,12 @@
+2009-11-28  Chris Morley
+
+	Avoid the OBPairData "OpenBabel Symmetry Classes" appearing
+	as a property in sdf and cml output files.  
+	* include/openbabel/base.h(OBGenericData):add 'local' to enum DataOrigin
+	* src/graphsym.cpp: SetOrigin "OpenBabel Symmetry Classes" to 'local'
+	* src/formats/mdlformat.cpp, src/formats/xml/cmlformat.cpp:
+	  Do not output 'local' OBPairData
+
 2009-11-27  Chris Morley
 
 	* src/formats/fastsearchformat.cpp: Give an estimate of the expected
